--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: Aportación desde la comunidad de 'R' para la extracción,
     comunitario puesto en marcha por Jaime Gómez-Obregón
     <https://github.com/JaimeObregon/subvenciones>.
 License: GPL (>= 3)
-URL: https://github.com/dadosdelaplace/Rsubvenciones_spain
+URL: https://github.com/dadosdelaplace/Rsubvenciones_spain/tree/rpak
 BugReports: https://github.com/dadosdelaplace/Rsubvenciones_spain/issues
 Depends: 
     R (>= 3.6)
@@ -24,7 +24,9 @@ Imports:
     readr,
     stringr
 Suggests: 
+    testthat (>= 3.0.0),
     tidyverse (>= 1.3.1)
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: es_ES
 Roxygen: list(markdown = TRUE)
